applications/testapp-3621974/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: testapp-3621974
  namespace: alpine

spec:
  selector:
    app: testapp-3621974

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
