applications/testapp-3621974/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: testapp-3621974
  namespace: alpine

spec:
  ingressClassName: traefik

  rules:
  - host: testapp-3621974.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: testapp-3621974

            port:
              number: 80
